Fixed double edge bug, adding volume column

--- a/research/kuramoto/kap/editor.html
+++ b/research/kuramoto/kap/editor.html
@@ -56,7 +56,9 @@
               <tr>
                 <th>ID</th>
                 <th>Size</th>
+                <th>Corank</th>
                 <th>Volume</th>
+                <th>Signature</th>
               </tr>
             </thead>
             <tbody>
