Disabling facet computation

--- a/research/kuramoto/kap/editor.html
+++ b/research/kuramoto/kap/editor.html
@@ -30,7 +30,7 @@
           </ul>
           <label for="apiname">Decomposition</label>
           <select id="apiname">
-            <option value="fnets">Facet decomposition</option>
+            <!-- <option value="fnets">Facet decomposition</option> -->
             <option value="contract">Edge contraction</option>
           </select>
           <div class="button-group">
